justify-content flex-start and flex-end

--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ body{
   display: inline-flex;
 }
 
-.start {
-
+.start {  
+  justify-content: flex-start;
 }
 
 .end {
-
+  justify-content: flex-end;
 }
 
 .center {
